# EffectiveMobileTestTusk

./: .gitignore  README.md  pyproject.toml  req.txt  schema.yaml
apps/ads/: admin.py  forms.py  models.py  urls.py  views.py
apps/ads/api/: serializers.py  urls.py  views.py
apps/ads/migrations/: 0001_initial.py
apps/ads/templates/: base.html  swagger-ui.html
apps/ads/templates/ads/: login.html  main.html  my_items.html  my_received_requests.html  my_requests.html  register.html
apps/tests/: test_views.py
config/: settings.py  urls.py
